chore: clean-up sonar issues